--- a/web-developer.html
+++ b/web-developer.html
@@ -172,7 +172,7 @@ Rails) to stabilize and expand our AI platform. AIcrowd (www.aicrowd.com) is a?.
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='https://ltdglobal.applytojob.com/apply/LGaeCK7vYR/Web-Developer?source=social'>Web Developer - LTD Global - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://ltdglobal.applytojob.com/apply/LGaeCK7vYR/Web-Developer?source=social'>Web Developer - LTD Global - Career Page</a></h5> 
 <p><span class="badge badge-light">Berkeley, CA</span></p>
 <p>Posted on:: 2019-07-23</p>
 <hr/>
@@ -184,13 +184,13 @@ Rails) to stabilize and expand our AI platform. AIcrowd (www.aicrowd.com) is a?.
 <p><span class="badge badge-light">Toronto Richmond Toronto</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://scopicsoftware.recruiterbox.com/jobs/fk03mxe'>
+<h5><a href='http://scopicsoftware.recruiterbox.com/jobs/fk03mxe'>
     Remote Junior Web Developer at Scopic Software
 </a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://advantagemediagroup.applytojob.com/apply/tZ5xlVD8v4/Front-End-Web-Developer'>Front End Web Developer - Advantage Media Group - Career Page</a></h5> 
+<h5><a href='http://advantagemediagroup.applytojob.com/apply/tZ5xlVD8v4/Front-End-Web-Developer'>Front End Web Developer - Advantage Media Group - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -265,7 +265,7 @@ researches configuration of Solr search engines and the Solr query language.</p>
 <p><span class="badge badge-light">Mountain View California</span></p>
 <p>Posted on:: 2019-07-22</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://onit.applytojob.com/apply/ZjF3IHxzaL/Web-Application-Developer'>Web Application Developer - Onit - Career Page</a></h5> 
+<h5><a href='http://onit.applytojob.com/apply/ZjF3IHxzaL/Web-Application-Developer'>Web Application Developer - Onit - Career Page</a></h5> 
 <p><span class="badge badge-light">Austin, TX</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
@@ -283,7 +283,7 @@ researches configuration of Solr search engines and the Solr query language.</p>
 <p><span class="badge badge-light">Mexico Belgrade</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/medallia/b2a75dd9-f271-47d0-8f34-7f7e4106a86b'>Medallia - Web Development Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/medallia/b2a75dd9-f271-47d0-8f34-7f7e4106a86b'>Medallia - Web Development Manager</a></h5> 
 <p><span class="badge badge-light">San Mateo, CA</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
@@ -348,7 +348,7 @@ und JavaScript? M?chtest du mithilfe der neusten Technologien und zusammen
 <p><span class="badge badge-light">Oxford London</span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/tripadvisor/jobs/1781962'>Job Application for Fullstack Web Developer - Software Engineer II at TripAdvisor</a></h5> 
+<h5><a href='https://boards.greenhouse.io/tripadvisor/jobs/1781962'>Job Application for Fullstack Web Developer - Software Engineer II at TripAdvisor</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
@@ -377,7 +377,7 @@ w/m/d) in M?nster (published: 28.05.2019). Apply now or check the other?...</p>
 <p><span class="badge badge-light">Toronto Richmond Toronto</span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
-<h5><a href='https://careers.jobscore.com/careers/radiantdigital/jobs/senior-web-developer-21628-bUeWt-QuSr6yuBaKkRyNN8'>Senior Web Developer-21628 #0187 job at Radiant Digital in Temple Terrace, FL, powered by JobScore</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.jobscore.com/careers/radiantdigital/jobs/senior-web-developer-21628-bUeWt-QuSr6yuBaKkRyNN8'>Senior Web Developer-21628 #0187 job at Radiant Digital in Temple Terrace, FL, powered by JobScore</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
@@ -412,7 +412,7 @@ job. Aircall's mission is to transform the business phone industry! Aircall is a
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=o8O08fwO&__jvst=Employee+Referral&__jvsd=sybKIfwV&__jvsc=Twitter&bid=no23MKwu'>ServiceNow Careers - Senior Manager, Marketing Web development</a></h5> 
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=o8O08fwO&__jvst=Employee+Referral&__jvsd=sybKIfwV&__jvsc=Twitter&bid=no23MKwu'>ServiceNow Careers - Senior Manager, Marketing Web development</a></h5> 
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on:: 2019-07-18</p>
 <hr/>
@@ -458,7 +458,7 @@ job. Aircall's mission is to transform the business phone industry! Aircall is a
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
-<h5><a href='https://webenertia.workable.com/j/5B76014E0D'>WebEnertia, Inc. - Jobs: Developer - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://webenertia.workable.com/j/5B76014E0D'>WebEnertia, Inc. - Jobs: Developer - Apply online</a></h5> 
 <p><span class="badge badge-light">California, United States</span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
