--- a/internship.html
+++ b/internship.html
@@ -41,6 +41,34 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='http://HUMANCARESYSTEMS.recruiterbox.com/jobs/fk03mai'>
+    Software Quality Assurance Intern at Humancaresystems
+</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-26</p>
+<hr/>
+<h5><a href='http://HUMANCARESYSTEMS.recruiterbox.com/jobs/fk03maz'>
+    Program Management Intern at Humancaresystems
+</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-26</p>
+<hr/>
+<h5><a href='http://zalora.applytojob.com/apply/uEVyBvPr0O/Partnership-Intern'>Partnership Intern - ZALORA SEA - Career Page</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-26</p>
+<hr/>
+<h5><a href='http://zalora.applytojob.com/apply/be9JwBaTkS/Digital-Imaging-Intern'>Digital Imaging Intern - ZALORA SEA - Career Page</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-26</p>
+<hr/>
+<h5><a href='http://zalora.applytojob.com/apply/DyAKF6FC4O/Intern-Vendor-Management'>Intern - Vendor Management - ZALORA SEA - Career Page</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-26</p>
+<hr/>
+<h5><a href='http://zalora.applytojob.com/apply/l8kh7gokPy/Intern-Marketplace-Account-Management'>Intern ? Marketplace Account Management - ZALORA SEA - Career Page</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-26</p>
+<hr/>
 <h5><a href='https://postman.workable.com/j/69AA5C5A99'>Postman - Jobs: Software Engineer, Intern - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
@@ -49,7 +77,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://close2real.join.com/jobs/264837-kardiologe-internist-mit-klinikerfahrung-fuer-berlin-oder-halle-m-w-d'>Job @ close2real (Berlin): Kardiologe/Internist mi... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://close2real.join.com/jobs/264837-kardiologe-internist-mit-klinikerfahrung-fuer-berlin-oder-halle-m-w-d'>Job @ close2real (Berlin): Kardiologe/Internist mi... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -101,11 +129,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/eidosmontreal/job/oCvCafwD'>Eidos Montr?al Careers - Stagiaire en ressources humaines / Human Resources intern</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/eidosmontreal/job/oCvCafwD'>Eidos Montr?al Careers - Stagiaire en ressources humaines / Human Resources intern</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/eidosmontreal/job/os6Cafw4'>Eidos Montr?al Careers - Stagiaire - Technicien Support Informatique / Intern ? IT Support Technician</a></h5> 
+<h5><a href='https://jobs.jobvite.com/eidosmontreal/job/os6Cafw4'>Eidos Montr?al Careers - Stagiaire - Technicien Support Informatique / Intern ? IT Support Technician</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -139,7 +167,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qHO9Vfwj&k=Job&j=olF19fwU&__jvst=Employee&__jvsd=sep77gwC&__jvsc=Twitter&bid=nYwPUKws'>Schneider Electric NAM Careers - Software Programmer Fall Internship</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qHO9Vfwj&k=Job&j=olF19fwU&__jvst=Employee&__jvsd=sep77gwC&__jvsc=Twitter&bid=nYwPUKws'>Schneider Electric NAM Careers - Software Programmer Fall Internship</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-26</p>
 <hr/>
@@ -243,7 +271,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/nutanix/job/o8ejafwz'>Nutanix Careers - HR Compensation Intern (Fall Internship)</a></h5> 
+<h5><a href='https://jobs.jobvite.com/nutanix/job/o8ejafwz'>Nutanix Careers - HR Compensation Intern (Fall Internship)</a></h5> 
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -370,7 +398,7 @@ learning?...</p>
 <p>Jul 17, 2019 ... I agree with the JOIN Terms & Conditions and Data Privacy Policy. APPLY FOR 
 THIS JOB. Already applied? Check the status of your application. Share this job:.</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/JobTeaser/743999692238997-marketing-assistant-internship-belgium-m-f-'>JobTeaser Marketing Assistant - Internship - Belgium (M/F) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/JobTeaser/743999692238997-marketing-assistant-internship-belgium-m-f-'>JobTeaser Marketing Assistant - Internship - Belgium (M/F) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -449,30 +477,6 @@ THIS JOB. Already applied? Check the status of your application. Share this job:
 <p>Posted on: 2019-07-24</p>
 <hr/>
 <h5><a href='https://boards.greenhouse.io/lightspeedpos/jobs/1787205'>Job Application for Channel Sales Intern at Lightspeed ENG</a></h5> 
-<p><span class="badge badge-light">Amsterdam, NL</span></p>
-<p>Posted on: 2019-07-24</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/lightspeedpos/jobs/1787209'>Job Application for Channel Sales Intern (German Speaking) at Lightspeed ENG</a></h5> 
-<p><span class="badge badge-light">Amsterdam, NL</span></p>
-<p>Posted on: 2019-07-24</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/lightspeedpos/jobs/1787218'>Job Application for Customer Success Intern at Lightspeed ENG</a></h5> 
-<p><span class="badge badge-light">Amsterdam, NL</span></p>
-<p>Posted on: 2019-07-24</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/lightspeedpos/jobs/1787226'>Job Application for Marketing Design Intern at Lightspeed ENG</a></h5> 
-<p><span class="badge badge-light">Amsterdam, NL</span></p>
-<p>Posted on: 2019-07-24</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/lightspeedpos/jobs/1787230'>Job Application for Sales Operations Intern at Lightspeed ENG</a></h5> 
-<p><span class="badge badge-light">Amsterdam, NL</span></p>
-<p>Posted on: 2019-07-24</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/lightspeedpos/jobs/1787233'>Job Application for Strategic Alliances Intern at Lightspeed ENG</a></h5> 
-<p><span class="badge badge-light">Amsterdam, NL</span></p>
-<p>Posted on: 2019-07-24</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/lightspeedpos/jobs/1787259'>Job Application for Copywriter - Dutch Speaking (Internship) at Lightspeed ENG</a></h5> 
 <p><span class="badge badge-light">Amsterdam, NL</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
